src/test/ui/issues/issue-40827.stderr
error[E0277]: `Rc<Foo>` cannot be shared between threads safely
  --> $DIR/issue-40827.rs:14:7
   |
LL |     f(Foo(Arc::new(Bar::B(None))));
   |     - ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<Foo>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Bar`, the trait `Sync` is not implemented for `Rc<Foo>`
note: required because it appears within the type `Bar`
  --> $DIR/issue-40827.rs:6:6
   |
LL | enum Bar {
   |      ^^^
   = note: required because of the requirements on the impl of `Send` for `Arc<Bar>`
note: required because it appears within the type `Foo`
  --> $DIR/issue-40827.rs:4:8
   |
LL | struct Foo(Arc<Bar>);
   |        ^^^
note: required by a bound in `f`
  --> $DIR/issue-40827.rs:11:9
   |
LL | fn f<T: Send>(_: T) {}
   |         ^^^^ required by this bound in `f`

error[E0277]: `Rc<Foo>` cannot be sent between threads safely
  --> $DIR/issue-40827.rs:14:7
   |
LL |     f(Foo(Arc::new(Bar::B(None))));
   |     - ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<Foo>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Bar`, the trait `Send` is not implemented for `Rc<Foo>`
note: required because it appears within the type `Bar`
  --> $DIR/issue-40827.rs:6:6
   |
LL | enum Bar {
   |      ^^^
   = note: required because of the requirements on the impl of `Send` for `Arc<Bar>`
note: required because it appears within the type `Foo`
  --> $DIR/issue-40827.rs:4:8
   |
LL | struct Foo(Arc<Bar>);
   |        ^^^
note: required by a bound in `f`
  --> $DIR/issue-40827.rs:11:9
   |
LL | fn f<T: Send>(_: T) {}
   |         ^^^^ required by this bound in `f`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
